--- a/CSS/home-style.css
+++ b/CSS/home-style.css
@@ -275,6 +275,22 @@ button {
     padding: 1rem;
     line-height: 1.1;
 }
+.homeBtn {
+    margin-left: 2rem;
+}
+.homeBtn a {
+    display: inline-block;
+    font-size: 1rem;
+    padding: 1rem 2rem;
+    background-color: var(--text-color-alt);
+    color: var(--text-color);
+    border: 0;
+    transition: .3s;
+}
+.homeBtn a:hover {
+    background-color: var(--title-color);
+    color: var(--text-color-alt);
+}
 /*======================== FOUNDERS ====================*/
 .founders__container {
     grid-template-rows: 1fr 100px;
@@ -294,6 +310,7 @@ button {
 }
 .founders__img {
     width: 80px;
+    border-radius: 50%;
     position: absolute;
     inset: 0;
     margin-left: auto;
@@ -311,52 +328,25 @@ button {
 
 }
 .founders__description {
+    display: flex;
+    justify-content: center;
     text-align: justify;
-    font-size: var(--smaller-font-size);
     color: var(--text-color);
 }
+.founders__content.founders__description {
+    font-size: var(--smaller-font-size);
+}
+.founders__text.founders__description {
+    font-size: var(--small-font-size);
+}
 
-/*======================== CARROSSEL ONE ====================*/
+
+/*==================== CARROUSEL ====================*/
+
+/*Função Slider*/
+
 /*
-.carrossel {
-    position: relative;
-    height: 100%;
-    background: var(--carroussel);
-}
 
-swiper-container {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-swiper-slide {
-    display: flex;
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
-}
-swiper-slide h3 {
-    position: absolute;
-    height: 5rem;
-    top: 13rem;
-    background: #1f3d4738;
-    backdrop-filter: blur(5px);
-    font-size: var(--h3-font-size);
-}
-swiper-slide h3 span {
-    color: var(--text-color-alt);
-}
-
-swiper-slide img {
-    display: block;
-    width: 100%;
-}
-*/
-
-/*======================== CARROSSEL TWO ====================*/
 .carroussel {
     margin: 0;
     background: var(--carroussel);
@@ -415,8 +405,6 @@ input[type=radio]:checked {
 h1 span {
     color: var(--text-color-alt);
 }
-
-/*Função Slider*/
 
 #s1:checked ~ #slide1, #s2:checked ~ #slide2,
 #s3:checked ~ #slide3, #s4:checked ~ #slide4,
@@ -479,6 +467,88 @@ h1 span {
         padding: 0 2.2rem;
     }
 } 
+*/
+
+/*==================== CARROUSEL TWO ====================*/
+
+.carrousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--carroussel);
+    height: 100dvh;
+}
+.carrousel__container {
+    width: 70%;
+    height: 70%;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    position: relative;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.swiper-slide p {
+    position: absolute;
+    top: 13rem;
+    padding: 1.5rem 2.5rem;
+    color: var(--title-color);
+    font-size: 2rem;
+    font-family: var(--secundary-font);
+    background: #1f3d4738;
+    backdrop-filter: blur(5px);
+    text-align: justify;
+}
+.swiper-slide a {
+    display: flex;
+    justify-content: center;
+}
+
+.autoplay-progress {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    z-index: 10;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: var(--swiper-theme-color);
+}
+
+.autoplay-progress svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--swiper-theme-color);
+    fill: none;
+    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
+}
+
+
+
 
 /*======================== FOOTER =============================*/
 .footer__container {
@@ -623,6 +693,7 @@ h1 span {
         position: absolute;
         display: flex;
     }
+    /*
     .carroussel {
         display: flex;
         background: var(--black-color);
@@ -647,7 +718,7 @@ h1 span {
         font-size: var(--big-font-size);
         height: 2.7rem;
         padding: 0 2.2rem;
-    }
+    } */
 }
 
 /* Medium Devices */
@@ -672,7 +743,7 @@ h1 span {
     .founders__container {
         grid-template-rows: 1fr 124px
     }
-    .carroussel {
+    /*.carroussel {
         height: 50vw;
     }
     #slider {
@@ -690,7 +761,7 @@ h1 span {
         font-size: var(--h2-font-size);
         height: 3.75rem;
         padding: 0 .70rem;
-    }
+    }*/
     .footer__container {
         grid-template-columns: .4fr .6fr .6fr 2fr;
     }
@@ -742,9 +813,9 @@ h1 span {
     .founders__card {
         height: 100px;
     }
-    #slider label h1 {
+    /*#slider label h1 {
         padding: 0 4rem;
-    }
+    }*/
     .footer__container {
         grid-template-columns: .4fr .7fr .7fr 1fr;
     }
@@ -766,7 +837,7 @@ h1 span {
         margin-right: 2rem;
     }
     .home__container {
-        grid-template-columns: 65% 35%;
+        grid-template-columns: 67% 33%;
     }
     .home__title {
         font-size: 1.8rem;
@@ -775,7 +846,7 @@ h1 span {
         padding: 2rem;
     }
     .home__img {
-        left: 37rem;
+        left: 40rem;
     }
     .founders__container {
         grid-template-columns: 60% 40%;
@@ -783,7 +854,7 @@ h1 span {
         column-gap: 1rem;
         row-gap: 0;
     }
-    #slider {
+    /*#slider {
         margin: 60px auto;
         height: 29vw;
     }
@@ -800,5 +871,5 @@ h1 span {
         font-size: 2rem;
         padding: 0 9rem;
         height: 5rem;
-    }
+    }*/
 }
